Remove unnecessary endpoint
