# docs/openapi.yaml
@@ -603,47 +603,6 @@ paths:
                     description: Bad Request
                 '500':
                     description: Internal Server Error
-        put:
-            tags:
-                - Permissions
-            description: Modify permissions of user
-            parameters:
-                - in: path
-                  name: userId
-                  schema:
-                      type: string
-                      format: uuid
-                  required: true
-                  description: ID of the user
-            requestBody:
-                content:
-                    application/json:
-                        schema:
-                            type: array
-                            items:
-                                type: string
-            responses:
-                '200':
-                    description: Ok
-                    content:
-                        application/json:
-                            schema:
-                                type: object
-                                properties:
-                                    id:
-                                        type: string
-                                        format: uuid
-                                    email:
-                                        type: string
-                                        format: email
-                                    permissions:
-                                        type: array
-                                        items:
-                                            type: string
-                '400':
-                    description: Bad Request
-                '500':
-                    description: Internal Server Error
     /api/permission/group/{groupId}:
         get:
             tags:
